agg middleware para post, correcion de seeders, correciones varias, act swagger y agg postam_collection
