# routes/users.routes.js
@@ -13,7 +13,6 @@ const router = Router();
 
 router.post("/", validarUsuario, validarNickname, userController.crearUsuario);
 router.get("/", userController.obtenerUsuarios);
-router.get("/:nickname",validarNickname, userController.obtenerUsuarioPorNickname);
 router.get("/:id", validarUsuarioId, userController.obtenerUsuarioId);
 router.put(
   "/:id",
